# kuksa-databroker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile-cli  Latency_Extractor_ReadMe.md  NOTICE.md  README.md  build-all-targets-cli.sh  build-all-targets.sh  build-databroker-cli.sh  build-databroker.sh  docker-compose.yml  dockerfile  prepare_release.sh  prometheus.yml
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
.github/actions/run-lib-tests/: action.yml
.github/workflows/: check_license.yml  create_draft_release.yml  debug_build.yml  kuksa_databroker-cli_build.yml  kuksa_databroker_build.yml  pre-commit.yml  sbom.yml
certificates/: CA.key  CA.pem  Client.key  Client.pem  README.md  Server.key  Server.pem
certificates/jwt/: jwt.key  jwt.key.pub
data/vss-core/: README.md  vss_release_4.0.json  vss_release_5.1.json
databroker/: Cargo.toml  build.rs  databroker_bin.cdx.json
databroker-cli/: Cargo.toml  databroker-cli_bin.cdx.json
databroker-cli/src/: cli.rs  kuksa_cli.rs  main.rs  sdv_cli.rs
databroker-proto/: Cargo.toml  build.rs
databroker-proto/src/: lib.rs
databroker/src/: broker.rs  glob.rs  lib.rs  main.rs  open_telemetry.rs  permissions.rs  types.rs  vss.rs
databroker/src/authorization/jwt/: decoder.rs
databroker/src/filter/: filter_manager.rs  mod.rs
databroker/src/filter_manager/: filter_manager.rs  mod.rs
databroker/src/grpc/: mod.rs  server.rs
databroker/src/grpc/kuksa_val_v1/: conversions.rs  val.rs
databroker/src/grpc/kuksa_val_v2/: conversions.rs  mod.rs  val.rs
databroker/src/grpc/sdv_databroker_v1/: broker.rs  collector.rs  conversions.rs
databroker/src/query/: executor.rs
databroker/src/viss/: server.rs
databroker/src/viss/v2/: conversions.rs  server.rs  types.rs
databroker/tests/: read_write_values.rs  viss_read.rs
databroker/tests/features/: read_write_values.feature  viss_read.feature
databroker/tests/world/: mod.rs
doc/: QUERY.md  README.md  TYPES.md  authorization.md  behavior.md  debugging.md  deployment.md  examples.md  kuksa_analysis.md  kuksa_requirementes.md  kuksa_use_cases.md  protocol.md  quickstart.md  system-architecture.md  terminology.md  tls.md  user_guide.md  wildcard_matching.md
doc/diagrams/: Client_actuate.drawio  Client_gets.drawio  Client_subscribes.drawio  MultipleProviderActuate.drawio  Provider_sets.drawio  Provider_subscribes.drawio  Provider_subscribes_and_writes.drawio  Signal_Consumer_actuate.drawio  consumer_actuate.drawio  consumer_actuate_multiple_providers.drawio  consumer_get_values.drawio  consumer_provider_list_metadata.drawio  consumer_provider_server_info.drawio  consumer_subscribes.drawio  provider_publish.drawio  provider_recv_actuation.drawio
doc/kuksa_analysis/: kuksa_api_definition.md  kuksa_design_topics.md  kuksa_requirements.md  kuksa_requirementss.md  kuksa_use_cases.md
doc/opentelemetry/: README.md  config-jaeger.yaml  config-otel-collector.yaml  prometheus.yml
doc/protocol/: README.md
integration_test/: helper.py  provider.py  requirements.txt  run.sh  test_databroker.py
integration_test/gen_proto/kuksa/val/v1/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py  val_pb2.py  val_pb2.pyi  val_pb2_grpc.py
integration_test/gen_proto/kuksa/val/v2/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py  val_pb2.py  val_pb2.pyi  val_pb2_grpc.py
integration_test/gen_proto/sdv/databroker/v1/: broker_pb2.py  broker_pb2.pyi  broker_pb2_grpc.py  collector_pb2.py  collector_pb2.pyi  collector_pb2_grpc.py  types_pb2.py  types_pb2.pyi
integration_test/viss/: STEPS.md  conftest.py  pytest.ini  readme.md  requirements.txt
integration_test/viss/features/: viss_v2 copy.feature  viss_v2.feature  viss_v2_basic.feature  viss_v2_bulk_updates.feature  viss_v2_core_authorization.feature  viss_v2_core_read.feature  viss_v2_core_subscribe.feature  viss_v2_core_unsubscribe.feature  viss_v2_core_update.feature  viss_v2_history_data.feature  viss_v2_multiple_paths.feature  viss_v2_server_capabilities.feature  viss_v2_transport_http_read.feature  viss_v2_transport_mqtt_read.feature  viss_v2_transport_wss_discovery_read.feature  viss_v2_transport_wss_filter.feature  viss_v2_transport_wss_history_read.feature  viss_v2_transport_wss_search_read.feature  viss_v2_transport_wss_subscribe_change.feature  viss_v2_transport_wss_subscribe_curvelog.feature  viss_v2_transport_wss_subscribe_range.feature  viss_v3_basic.feature  viss_v3_core_read.feature  viss_v3_transport_grpc.feature  viss_v3_transport_http.feature  viss_v3_transport_mqtt.feature  viss_v3_transport_wss.feature
integration_test/viss/mosquitto-config/: mosquitto.conf
integration_test/viss/tests/: test_viss_v2.py  test_viss_v2_advanced.py  test_viss_v2_basic.py  test_viss_v2_core.py  test_viss_v2_transport.py  test_viss_v3.py
integration_test/viss/tests/test_steps/: http_viss_client.py  mqtt_mock_databroker.py  mqtt_viss_client.py  types.py  viss_v2_steps.py  websockets_viss_client.py
integration_test/visstest/: requirements.txt  run_visstest.sh  test01.py
jwt/: README.md  actuate-provide-all.json  actuate-provide-all.token  provide-all.json  provide-all.token  provide-vehicle-speed.json  provide-vehicle-speed.token  read-all.json  read-all.token  read-vehicle-speed.json  read-vehicle-speed.token
lib/: Cargo.toml
lib/common/: Cargo.toml
lib/common/src/: conversion.rs  lib.rs  types.rs
lib/databroker-examples/: Cargo.toml
lib/databroker-examples/examples/: kuksa_val_v2.rs  perf_setter.rs  slow_subscriber.rs
lib/kuksa/: Cargo.toml
lib/kuksa/src/: lib.rs
lib/kuksa_val_v2/: Cargo.toml
lib/kuksa_val_v2/src/: lib.rs
lib/sdv/: Cargo.toml
lib/sdv/src/: lib.rs
proto/kuksa/val/v1/: README.md  types.proto  v1.md  val.proto
proto/kuksa/val/v2/: README.md  types.proto  v2.md  val.proto
proto/sdv/databroker/v1/: README.md  sdv-broker.md  sdv-collector.md  types.proto
scripts/: Dockerfile  Dockerfile-cli  build-databroker-cli.sh  build-databroker.sh  licensecuration.yaml  prepare_release.sh
