#********************************************************************************
# Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[workspace]

resolver = "2"

members = [
    "databroker",
    "databroker-proto",
    "databroker-cli",
]

exclude = [
   "lib/*"
]

[workspace.dependencies]
clap = { version = "4.2", default-features = false }
databroker-proto = { path = "databroker-proto" }
# prost has no features
prost = "0.12.6"
# prost-types has no features
prost-types = "0.12.6"
# tokio does not enable features by default
tokio = "1.46.1"
# tokio-stream has no features
tokio-stream = "0.1.8"
tonic = { version = "0.11.0", default-features = false }
tonic-build = { version = "0.11.0", default-features = false }

[profile.release]
lto = true                 # Link time optimization (dead code removal etc...)
opt-level = "s"
codegen-units = 1
incremental = false
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false # do not strip debug symbols
debug = true  # enable debug symbols
