#********************************************************************************
# Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker"
version = "0.6.0"
authors = ["Eclipse KUKSA Project"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "databroker"
path = "src/lib.rs"

[dependencies]
kuksa-common = { path = "../lib/common"}
kuksa = { path = "../lib/kuksa"}
databroker-proto = { workspace = true }
tonic = { workspace = true, features = ["transport", "channel", "prost"] }
tonic-reflection = "0.11.0"
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { workspace = true, features = ["sync", "net"] }
async-stream = "0.3"
socket2 = { version = "0.5.8", features = ["all"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
clap = { workspace = true, features = [
    "std",
    "env",
    "help",
    "usage",
    "error-context",
] }
sqlparser = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.1.0"
regex = "1.7.1"
glob-match = "0.2.1"
indexmap = "2.8.0"

jemallocator = { version = "0.5.0", optional = true }
lazy_static = "1.4.0"
thiserror = "1.0.47"
futures = { version = "0.3.28" }
async-trait = "0.1.82"

# VISS
axum = { version = "0.6.20", optional = true, features = ["ws"] }
chrono = { version = "0.4.31", optional = true, features = ["std"] }
uuid = { version = "1.4.1", features = ["v4"] }

# OTEL
opentelemetry = { version = "0.19.0", optional = true, features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version="0.12.0", optional = true,  features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0", optional = true }
tracing-opentelemetry = { version="0.19.0", optional = true }

# systemd related dependency, only relevant on linux systems
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.1"

[features]
default = ["tls"]
tls = ["tonic/tls", "kuksa-common/tls", "kuksa/tls"]
jemalloc = ["dep:jemallocator"]
viss = ["dep:axum", "dep:chrono"]
libtest = []
otel = ["dep:chrono", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:tracing-opentelemetry"]

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8", features = [
    "cargo",
    "git",
    "gitoxide",
] }

[dev-dependencies]
anyhow = "1.0"
chrono = "^0.4"
cucumber = { version = "0.20", default-features = false, features = ["libtest", "macros"] }
tonic-mock = "0.3.0"

[[test]]
name = "read_write_values"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
