[workspace]
resolver = "2"

members = [
    "common",
    "kuksa",
    "sdv",
    "databroker-examples",
    "kuksa_val_v2",
]

[workspace.dependencies]
databroker-proto = { path = "../databroker-proto" }
# prost has no features
prost = "0.14"
# prost-types has no features
prost-types = "0.14"
# tokio does not enable features by default
tokio = "1.17.0"
# tokio-stream has no features
tokio-stream = "0.1.8"
tonic = { version = "0.14.0", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
